# ML_High_Jump_Performance_System

./: .gitignore  ARCHITECTURE.md  EMAIL_FOR_IMOGEN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: add-dataset-loader.prompt.md  add-physics-constraint.prompt.md  analyse-jump-video.prompt.md  run-pretraining.prompt.md  run-tests.prompt.md
.github/workflows/: copilot-setup-steps.yml
experiments/configs/: pretrain_dynamics.yaml
scripts/: download_datasets.py  pretrain_dynamics_pinn.py  run_pose_estimation.py  train_projectile_pinn.py
services_scaffold/: README.md  package.json
services_scaffold/ai_model_training_service/: celery_worker.py  config.py  crud.py  database.py  main.py  models.py  requirements.txt  s3_utils.py  schemas.py
services_scaffold/anomaly_detection_service/: config.py  main.py  s3_utils.py  schemas.py
services_scaffold/api_gateway/: auth.py  config.py  dependencies.py  main.py  requirements.txt  schemas.py
services_scaffold/feedback_reporting_service/: config.py  main.py  schemas.py
services_scaffold/optimization_engine_service/: config.py  main.py  requirements.txt  schemas.py
services_scaffold/pinn_gnn_inference_service/: config.py  main.py  requirements.txt  s3_utils.py  schemas.py
services_scaffold/population_model_service/: main.py  requirements.txt  schemas.py
services_scaffold/pose_estimation_service/: config.py  main.py  requirements.txt  s3_utils.py  schemas.py
services_scaffold/processing_orchestration_service/: celery_worker.py  config.py  main.py  requirements.txt  schemas.py
services_scaffold/session_bvh_data_service/: config.py  crud.py  database.py  main.py  (+4 more)
src/: __init__.py
tests/: conftest.py
(+79 files in other folders)
